--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-seed==0.3.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 Faker==25.0.1
+pillow==10.3.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
@@ -13,3 +14,4 @@ six==1.16.0
 sqlparse==0.5.0
 toposort==1.10
 typing_extensions==4.11.0
+tzdata==2024.1
