final_project:ALLOWED_HOSTS 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,venv,visualstudiocode,pycharm,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,venv,visualstudiocode,pycharm,macos,windows
 
+### custom ###
+config.py
+
 ### macOS ###
 # General
 .DS_Store
