--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,36 @@
+annotated-types==0.7.0
+anyio==4.4.0
 asgiref==3.8.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
+colorama==0.4.6
+distro==1.9.0
 Django==4.2.11
 django-extensions==3.2.3
 django-seed==0.3.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+exceptiongroup==1.2.1
 Faker==25.0.1
 googlemaps==4.10.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
+openai==1.32.0
 pillow==10.3.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+pydantic==2.7.3
+pydantic_core==2.18.4
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
 requests==2.32.3
 six==1.16.0
+sniffio==1.3.1
 sqlparse==0.5.0
 toposort==1.10
+tqdm==4.66.4
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
